Make sure that apostrophes are unescaped when visualising messages

Title

BUG: 488325